# tackle

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .tackle.yaml  .travis.yml  404.html  AUTHORS.html  CHANGELOG.md  CONTRIBUTING.html  HISTORY.html  HISTORY.md  LICENSE  MANIFEST.in  Makefile  NUKI_UPDATE.md  README.alt.md  README.html  README.md  README.old.md  README.wip.md  TESTING.html  TODO.md  TTD.md  __main__.py  api.html  calling-tackle.html  conftest.py  cookiecutter.html  cookiecutter.operators.html  creating-providers.html  demos.html  docs-gen.yaml  first_steps.html  genindex.html  index.html  installation.html  mkdocs.tackle.yml  mkdocs.yaml  mkdocs.yml  notes.html  (+30 more)
.bak/: tfvars.py
.github/: ISSUE_TEMPLATE.md  mkdocs.old.yml
HISTORY/: index.html
TTD/: index.html
_modules/: index.html
_sources/: AUTHORS.md.txt  HISTORY.md.txt  README.md.txt  api.rst.txt  calling-tackle.md.txt  creating-providers.md.txt  demos.md.txt  index.md.txt  index.rst.txt  installation.rst.txt  overview.rst.txt  parser-spec.md.txt  special-keys.md.txt  tackle.cli.rst.txt  tackle.parser.rst.txt  tackle.providers.rst.txt  tackle.render.rst.txt  tackle.rst.txt  tackle.utils.rst.txt  troubleshooting.rst.txt  tutorial-codegen.rst.txt  tutorial1.rst.txt  tutorial2.rst.txt
_static/: documentation_options.js
advanced/: calling_from_python.html  choice_variables.html  cli_options.html  copy_without_render.html  dict_variables.html  differences_tackle_cookiecutter.html  directories.html  hook_base_methods.html  hooks.html  index.html  injecting_context.html  (+8 more)
(+3000 files in other folders)
